--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,25 @@
-.header {
-  background-color: 'red';
-  padding: 20px;
-  text-align: center;
-  margin-left: 200px;
+.app {
+  font-family: Arial, sans-serif;
 }
 
-.textStyle {
-  color: blue
+nav ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  padding: 0;
+  margin: 20px 0;
+}
+
+nav ul li {
+  margin: 0 15px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 1.2rem;
+}
+
+nav ul li a:hover {
+  color: #007BFF;
 }
